--- a/polymerday-twitter-timeline.html
+++ b/polymerday-twitter-timeline.html
@@ -1,10 +1,12 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="widget-import.html">
+<link rel="import" href="socket.io.html">
 
 <!--
 `polymerday-twitter-timeline`
 Twitter timeline for polymerday event
 
-@demo demo/index.html 
+@demo demo/index.html
 -->
 
 <dom-module id="polymerday-twitter-timeline">
@@ -14,21 +16,8 @@ Twitter timeline for polymerday event
         display: block;
       }
     </style>
-    <h2>Hello [[prop1]]</h2>
+    <div id="timeline"></div>
   </template>
 
-  <script>
-    Polymer({
-
-      is: 'polymerday-twitter-timeline',
-
-      properties: {
-        prop1: {
-          type: String,
-          value: 'polymerday-twitter-timeline',
-        },
-      },
-
-    });
-  </script>
-</dom-module>
+  <script src="polymerday-twitter-timeline.js"></script>
+<dom-module>
