--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,8 @@
             display: block;
             --twitter-timeline: {
               height: 550px;
-              border-bottom:1px rgba(0, 0, 0, 0.10) solid;
+              border-bottom:1px rgba(0, 0, 0, 0.20) solid;
+              border-left:1px rgba(0, 0, 0, 0.20) solid;
             };
           }
           .centered {
@@ -55,6 +56,8 @@
 
           <polymerday-twitter-timeline
             id="timeline"
+            api-url-base="http://localhost:3000"
+            hashtag=""
             language="es"></polymerday-twitter-timeline>
         </div>
       </template>
