feat(*): New elapse property. Time it has to be spent to show up a new tweet. By default is 0, it means every tweet is shown as soon as possible

--- a/polymerday-twitter-timeline.html
+++ b/polymerday-twitter-timeline.html
@@ -61,12 +61,12 @@ Example:
 
     <div id="timeline"></div>
     <iron-ajax auto
-               url="[[trackUrl]]"
+               url="[[_trackUrl]]"
                method="POST"
                handle-as="json"
                debounce-duration="300"></iron-ajax>
     <iron-ajax auto
-               url="[[untrackUrl]]"
+               url="[[_untrackUrl]]"
                method="POST"
                handle-as="json"
                debounce-duration="300"></iron-ajax>
