refactor(*): name change from polymerday-twitter-timeline to polymer-twitter-realtimeline

--- a/polymer-twitter-realtimeline.html
+++ b/polymer-twitter-realtimeline.html
@@ -4,20 +4,19 @@
 <link rel="import" href="socket.io.html">
 
 <!--
-`polymerday-twitter-timeline`
-Twitter timeline for polymerday event
+`polymer-twitter-realtimeline`
+Twitter real timeline
 
 Example:
 ```html
-<polymerday-twitter-timeline
-            api-url-base="[[apiUrlBase]]"
-            ></polymerday-twitter-timeline>
+<polymer-twitter-realtimeline
+            api-url-base="[[apiUrlBase]]"></polymer-twitter-realtimeline>
 ```
 
 @demo demo/index.html
 -->
 
-<dom-module id="polymerday-twitter-timeline">
+<dom-module id="polymer-twitter-realtimeline">
   <template>
     <style>
       :host {
@@ -62,5 +61,5 @@ Example:
     <div id="timeline"></div>
   </template>
 
-  <script src="polymerday-twitter-timeline.js"></script>
+  <script src="polymer-twitter-realtimeline.js"></script>
 <dom-module>
