refactor(demo): html and javascript code in different files

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -80,75 +80,7 @@
             elapse="0"></polymer-twitter-realtimeline>
         </div>
       </template>
-
-      <script>
-        Polymer({
-            is: "my-demo",
-            properties: {
-
-              apiUrlBase: {
-                type: String,
-                value: 'http://localhost:3000'
-              },
-
-              user: {
-                type: Object,
-                value: null,
-                observer: '_computeUserData'
-              },
-
-              _hashtag: {
-                type: String,
-                observer: '_hashtagObserver'
-              },
-
-              _trackUrl: {
-                type: String,
-                readOnly: true
-              }
-            },
-
-            ready: function() {
-              this.signInAnonymously();
-            },
-
-            signInAnonymously: function() {
-              this.$.auth
-                .signInAnonymously()
-                  .then(function(user) {
-                    //ok
-                  }.bind(this))
-                  .catch(function(err) {
-                    console.log('Error connecting to database');
-                  }.bind(this));
-            },
-
-            _computeUserData: function(user) {
-              if (user) {
-                this.set('_hashtagPath', '/hashtag/to/track');
-              }
-            },
-
-            _hashtagObserver: function(_hashtag, _oldhashtag) {
-              if (typeof _hashtag !== 'string') {
-                return;
-              }
-
-              _hashtag = _hashtag.replace(/#/, '');
-              this.$.input.value = _hashtag;
-
-              //this line will force a new api call
-              this._set_trackUrl(this.apiUrlBase + '/twitterstream/track/' + _hashtag);
-            },
-
-            _doRequest: function() {
-              if (this.$.form.validate()) {
-                this.set('_hashtag', this.$.input.value);
-              }
-            }
-        });
-      </script>
-
+      <script src="demo.js"></script>
     </dom-module>
 
     <my-demo></my-demo>
